--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["svm-featues"]
+members = ["svm-featues", "syscalls"]
 
 resolver = "3"
 
@@ -11,3 +11,9 @@ license = "Apache-2.0"
 
 [workspace.dependencies]
 agave-feature-set = "2.3.6"
+# solana-sbpf = "0.12.0"
+solana-compute-budget = "2.3.6"
+solana-bpf-loader-program = "2.3.6"
+solana-program-runtime = { version = "2.3.6", features = [
+    "dev-context-only-utils",
+] }
